compiler/hachi-tests/tests/snapshots/ui_tests__compiler_ui_tests@syntax__trivial__unexpected_end_of_file.test.snap
---
source: compiler/hachi-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/syntax/trivial/unexpected_end_of_file.test
input_file: compiler/hachi-tests/tests/ui/syntax/trivial/unexpected_end_of_file.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: syntax::unexpected_end_of_file

  × expected more characters after this
   ╭─[tests/ui/syntax/trivial/unexpected_end_of_file.test:1:13]
 1 │ fn foo() -> *
   ·             ┬
   ·             ╰── required more input to parse
   ╰────
  help: add more input to form a valid program
